demo-helm-chart-nginx/charts/customer-demo-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enforcer-demo-ingress
  namespace: demo
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: static-web-service
                port:
                  number: 80
